@@ -5263,7 +5263,6 @@ void TestDocks::tst_sidebarOverlayGetsHiddenOnClick()
 
         const QPoint localPt(100, 250);
         Tests::clickOn(m1->mapToGlobal(m1->rect().topLeft() + localPt), m1->childAt(localPt));
-        QEXPECT_FAIL("", "will fix", Continue);
         QVERIFY(!dw1->isOverlayed());
 
         delete dw1;
